--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <configuration>
+                    <repoToken>qRjstXeDgg09jREQMhi9T3kPsSj18BW4E</repoToken>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
